--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,10 @@ sass:
 # Compress HTML (in liquid via layouts/compress.html)
 compress_html:
   clippings: all
+  
+# Plugins
+plugins:
+  - jekyll-seo-tag
 
 # set some common post defaults
 defaults:
