Added maps by state page, tweaked other pages and front-matter

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,9 +2,9 @@
 
 - text: Home
   url: /
-- text: About
-  url: /about
-- text: Contact
-  url: /contact
 - text: Blog
   url: /blog
+- text: Maps by State
+  url: /maps-by-state
+- text: About
+  url: /about
