Added SEO Description field

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -29,6 +29,7 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Intro Paragraph", name: "intro_paragraph", widget: "markdown", required: false}
       - {label: "Body", name: "body", widget: "markdown", required: false}
       - {label: "Categories", name: "categories", widget: "string", required: false}
+      - {label: "SEO Description", name: "seo_description", widget: "string", required: false}
     # PAGES
   - name: "page"
     label: "Page"
