--- a/admin/config.yml
+++ b/admin/config.yml
@@ -28,19 +28,13 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Publish Date", name: "date", widget: "datetime", format: "YYYY-MM-DD HH:mm:ss"}
       - {label: "Intro Paragraph", name: "intro_paragraph", widget: "markdown", required: false}
       - {label: "Body", name: "body", widget: "markdown", required: false}
-      - label: 'Featured Image'
-        name: 'featured_image'
-        widget: 'image'
-        required: false
-        tagname: ''
-        allow_multiple: false
-      - {label: "Featured Image Alt", name: "featured_image_alt", widget: "string", required: false}
-      - label: 'Featured Image Fullsize/Link'
-        name: 'featured_image_fullsize_link'
-        widget: 'file'
-        required: false
-        tagname: ''
-        allow_multiple: false
+      - name: featured_image_widget
+        label: Featured image
+        widget: object
+        fields:
+          - {label: 'Featured Image', name: 'featured_image', widget: 'image', required: false, tagname: '', allow_multiple: false}
+          - {label: "Featured Image Alt", name: "featured_image_alt", widget: "string", required: false}
+          - {label: 'Featured Image Fullsize/Link', name: 'featured_image_fullsize_link', widget: 'file', required: false, tagname: '', allow_multiple: false}
       - {label: "Categories", name: "categories", widget: "string", required: false}
       - {label: "SEO Description", name: "seo_description", widget: "string", required: false}
     # PAGES
